--- a/charts/metrics_xapp/templates/service.yaml
+++ b/charts/metrics_xapp/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: xapp-service
   labels:
-    app: python_xapp_runner
+    app: metrics-app
 spec:
   type: ClusterIP
   clusterIP: None
@@ -21,4 +21,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: python_xapp_runner
+    app: metrics-app
