--- a/charts/metrics_xapp/templates/deployment.yaml
+++ b/charts/metrics_xapp/templates/deployment.yaml
@@ -31,6 +31,7 @@ spec:
             limits:
               memory: 50Mi
               cpu: 1m
+      {{ end }}
 
       containers:
         - name: python-xapp-runner
