--- a/charts/metrics_xapp/templates/deployment.yaml
+++ b/charts/metrics_xapp/templates/deployment.yaml
@@ -46,6 +46,7 @@ spec:
               cp -RL /opt/xApps/files/* /tmp/xApp/;
               cp -RL /opt/xApps/lib /tmp/xApp/;
               chmod +x /tmp/xApp/start-metrics.sh;
+              pip install influxdb-client;
               exec python3 -u /tmp/xApp/xapp.py;
           env:
             {{- range $key, $value := .Values.env }}
