--- a/charts/metrics_xapp/values.yaml
+++ b/charts/metrics_xapp/values.yaml
@@ -21,7 +21,7 @@ env:
   PORT: 55555
   BUCKET: srsran
   TESTBED: default
-  URL: http://influxdb2.srs5g.svc.cluster.local:8086
+  URL: http://influxdb2.srs72.svc.cluster.local:8086
   ORG: srs
   TOKEN: "605bc59413b7d5457d181ccf20f9fda15693f81b068d70396cc183081b264f3b"  
 
