--- a/charts/metrics_xapp/templates/deployment.yaml
+++ b/charts/metrics_xapp/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
               cp -RL /opt/xApps/files/* /tmp/xApp/;
               cp -RL /opt/xApps/lib /tmp/xApp/;
               chmod +x /tmp/xApp/start-metrics.sh;
-              exec python3 -u /tmp/xApp/xapp.py --udp-port "${PORT}${RETINA_PORTS}" --bucket "${BUCKET}" --testbed "${TESTBED}" --db-config url="${URL}" org="${ORG}" token="${TOKEN}";
+              exec python3 -u /tmp/xApp/xapp.py --log-level DEBUG --udp-port "${PORT}${RETINA_PORTS}" --bucket "${BUCKET}" --testbed "${TESTBED}" --db-config url="${URL}" org="${ORG}" token="${TOKEN}";
           env:
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
