--- a/charts/metrics_xapp/templates/deployment.yaml
+++ b/charts/metrics_xapp/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
       {{ end }}
 
       containers:
-        - name: python-xapp-runner
+        - name: metrics
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           securityContext:
