--- a/charts/metrics_xapp/templates/deployment.yaml
+++ b/charts/metrics_xapp/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: metrics-app
     spec:
+      hostPID: true 
       # --- Pod Level Settings ---
       {{ if .Values.waitgnb }} 
       initContainers:
