--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -23,6 +23,7 @@ spec:
             - /bin/sh
             - -c
             - until ncat -zvu srsran-5g-du-gtpu 2152; do echo "waiting for DU to start"; sleep 1; done
+            - sleep 5
           resources:
             requests:
               memory: 50Mi
