--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
       containers:
         - name: python-xapp-runner
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           # --- Container Level Settings ---
           ports:
             - containerPort: {{ .Values.service.port }}
